# waifuai

./: LICENSE  README.md  setup.cfg
waifuai/: waifuai.py
