[metadata]
name = waifuai
version = 0.0.2
author = WaifuAI
author_email = waifuai@users.noreply.github.com
description = Make your waifus smarter!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waifuai/waifuai
project_urls =
    Bug Tracker = https://github.com/waifuai/waifuai/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = waifuai
packages = find:
python_requires = >=3.6

[options.packages.find]
where = waifuai
